=head1 Changes in DBD-Oracle 1.16 (svn rev XXX)   XXXX 2004

  NOTE: This release no longer supports the old Oracle 7 OCI interface.

  Added NCHAR/UFT8 and extended 8bit character set processing support
    Thanks to Lincoln Baxter (with a little help from Jeff Urlwin)
       $dbh->{ora_ph_csform} = SQLCS_NCHAR;
       $sth->bind_param(..., { ora_csform => SQLCS_NCHAR });
    There are problems with t/30long.t when NLS_LANG is set and
    ends in a multi byte character set.  Help welcome.
    See POD for more information and documentation
  Fixed build32/build64 Makefile.PL bug spotted by Sean Kelly.
  Fixed Oracle version detection on clients thanks to Marko Asplund.
  Fixed Oracle 10 version detection on clients thanks to Andy Hassall.
  Fixed suprious warning from Makefile.PL thanks to Marko Asplund.
  Fixed placeholder names to be case insensitive thanks to Charles Jardine.
  Fixed some LOB test problems with Oracle 8.1.7 by implementing ora_lob_append
    with OCILobGetLength() and OCILobWrite(), insted of buggy OCILobAppend(),
    if the Oracle client version is < 9.0. Thanks to Jeff Urlwin.
  Fixed reporting of length truncated in error message thanks to Jeff Urlwin.
  Fixed column_info() to handle TIMESTAMP and INTERVAL datatypes
    for Oracle >= 8 thanks to Stephen Clouse.
  Fixed handling of temporary LOBs thanks to Chris Donnelly.

  Changed some utf8 internals for LOBs.
  Changed to not warn if ORACLE_HOME env var is not defined
    as it's not used with Oracle's new 'Instant Client'.
  Changed ORA_OCI constant from being just 7 or 8 to being a dualvar:
    in numeric context returns the major version number (8, 9, 10 etc)
    in string context returns "major.minor" version string.

  Added Test::More as a prerequisite module.
  Added bind_param() support for SQL_BLOB & SQL_CLOB thanks to Stephen Clouse.
  Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
  Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.